src/Trade/TradeContainer.css
.TradeView-Container {
  display: flex;
  flex-direction: row;
  /* min-height: 110vh; */
  justify-content: stretch;
  background-color: var(--trade-background);
}

.TradeView-Panel {
  width: 288px;
  min-width: 288px;
  padding: 1rem;
  background-color: var(--trade-background);
  color: var(--dark-color);
  flex-grow: 0;
  border-top: 4px solid var(--trade-borders);
  border-right: 4px solid var(--trade-borders);
}

.WatchListContainer {
  display: flex;
  flex-direction: column;
}

.WatchList-Panel {
  width: 288px;
  min-width: 288px;
  background: var(--trade-background);
  border-top: 4px solid var(--trade-borders);
  border-right: 4px solid var(--trade-borders);
  color: var(--dark-color);
  height: 100%;
  flex-grow: 0;
}

.Logo-In-WatchList {
  background: var(--trade-background);
  border-right: 4px solid var(--trade-borders);
  min-height: 75px;
  display: flex;
  align-items: center;
  padding: 0.5rem 31px;
  box-shadow: 0 0 1.25rem rgb(31 45 61 / 5%);
}

.TradeChart-Container {
  display: flex;
  flex-direction: column;
  /* min-height: 100vh; */
  flex-grow: 2;
}

.TradeView-Symbol {
  display: grid;
  grid-template-columns: 500px auto;
  background: var(--trade-background);
  /* border-top: 4px solid var(--trade-borders);
  border-bottom: 4px solid var(--trade-borders); */
}

@media (max-width: 1400px) {
  .TradeView-Symbol {
    grid-template-columns: 400px auto;
  }
}

@media (max-width: 1230px) {
  .TradeView-Symbol {
    grid-template-columns: 1fr;
  }
}

.TradeView-Chart {
  background: var(--trade-chart-background);
  flex-grow: 2;
}

.TradeOrders {
  height: 40vh;
  background: var(--trade-background);
  border-top: 4px solid var(--trade-borders);
}

.TradeView-Panel-Mobile {
  width: 100%;
  height: 100vh;
  border: none;
  overflow-y: scroll;
}

.TradeChart-Container-Mobile {
  width: 100%;
  min-height: 100vh;
}

.TradeView-Container-Mobile {
  margin-bottom: 100px;
}

.TradeView-Panel-Mobile-Close {
  position: absolute;
  top: 25px;
  right: 25px;
}

@media (min-width: 992px) {
  .TradeView-Panel-Mobile-Close {
    display: none;
  }
}

.chart-view {
  position: relative;
  filter: blur(8px);
  -webkit-filter: blur(8px);
}

.chart-view-content {
  text-align: center;
  position: absolute;
  padding: 10px;
  top: 212px;
  left: 45px;
  color: #718096;
}

.chart-view-content-mobile {
  text-align: center;
  position: absolute;
  padding: 10px;
  color: #718096;
  inset: 0;
  margin-top: 20px;
}

.chart-view-content p {
  margin-bottom: 0.5rem;
  font-size: 0.8rem;
}

.chart-order-view {
  filter: blur(8px);
  -webkit-filter: blur(8px);
}

.chart-order-view-position {
  position: relative;
}

.chart-view-order-content {
  text-align: center;
  position: absolute;
  inset: 0;
  margin-top: 40px;
}

.chart-view-order-content p {
  font-size: 0.8rem;
}

.skipped-trade-view {
  grid-template-columns: 200px auto;
}

